# simplegame

./: .gitignore  CMakeLists.txt  Player.cpp  Player.h  README.md  main.cpp
entity/: Entity.cpp  Entity.h  Player.cpp  Player.h
include/: Entity.h
src/: main  main.cpp
src/collision/: CollisionDetection.cpp
src/entity/: Enemy.cpp  Entity.cpp  Laser.cpp
src/include/: Assets.h  Booleans.h  CollisionDetection.h  Enemy.h  EnemyAssets.h  Entity.h  GameAssets.h  Laser.h  LaserAssets.h  PlayerAssets.h
